--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,18 +2,9 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+	background: var(--background);
+	color: var(--black);
+	font-family: var(--font-family);
 }
 
 a {
@@ -34,4 +25,17 @@ a {
 		background: black;
 		color: white;
 	}
+}
+
+:root {
+	--black: #3B434E;
+	--grey-light: #EBEBEB;
+	--white: white;
+	--primary: #7653FC;
+	--primary-hover: #5d3ae9;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--background: #E5E5E5;
+	--font-family: "Noto Sans", sans-serif;
 }
