--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,6 +1,6 @@
 .wrapper {
 	display: grid;
-	grid-template-columns: auto 230px minmax(320px, 1200px) auto;
+	grid-template-columns: 0px 230px minmax(320px, 1200px) auto;
 	grid-template-rows: auto 1fr auto;
 	gap: 40px 30px;
 	min-height: 100vh;
