--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -1,7 +1,7 @@
 .product {
 	display: grid;
 	grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratingstart] auto [end];
-	margin-bottom: 30px;
+	margin-top: 30px;
 	padding: 30px;
 }
 
@@ -138,6 +138,22 @@
 .charachteristicsDots {
 	border-bottom: 1px dashed var(--grey-light);
 	margin-bottom: 5px;
+}
+
+.closed {
+	overflow: hidden;
+	max-height: 0;
+	height: 0;
+}
+
+.opened {
+	overflow: hidden;
+	max-height: auto;
+	padding: 30px;
+}
+
+.reviews {
+	margin-top: 5px;
 }
 
 @media screen and (max-width: 1320px) {
