--- a/page-components/topPageComponent/topPageComponent.module.css
+++ b/page-components/topPageComponent/topPageComponent.module.css
@@ -39,6 +39,6 @@
 
 @media screen and (max-width: 640px) {
 	.title {
-		grid-template-columns: auto 1fr auto;
+		grid-template-columns: auto 1fr;
 	}
 }
