Доделаны формы комментариев

--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,9 +1,9 @@
 .card {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
 	border-radius: 5px;
-	background: var(--white);
+	background: var(--background-card);
 }
 
 .blue {
-	background: #F9F8FF;
+	background: var(--background-card__blue);
 }
