--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -22,7 +22,7 @@
 .ghost {
 	border: 1px solid (var(--grey-light));
 	background-color: none;
-	color: var(--black);
+	color: var(--grey-dark);
 }
 
 .ghost:hover {
