--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -1,11 +1,31 @@
-.filled svg {
-	fill: var(--primary);
-}
-
 .star svg {
 	margin-right: 5px;
 }
 
 .editable {
 	cursor: pointer;
+}
+
+.error {
+	position: relative;
+}
+
+.error svg {
+	stroke: var(--red);
+	fill: var(--red);
+	opacity: 0.6;
+}
+
+.errorMessage {
+	position: absolute;
+	bottom: -22px;
+	left: 0px;
+	color: var(--red);
+}
+
+.filled svg {
+	fill: var(--primary);
+	stroke: none;
+	opacity: 1;
+	outline: none;
 }
