--- a/components/Search/Search.module.css
+++ b/components/Search/Search.module.css
@@ -1,10 +1,12 @@
 .search {
 	position: relative;
+	display: block;
 	width: 100%;
 }
 
-.input {
+.inputSearch>input {
 	width: 100%;
+	display: block;
 }
 
 .button {
