--- a/components/TextArea/TextArea.module.css
+++ b/components/TextArea/TextArea.module.css
@@ -1,4 +1,7 @@
 .textArea {
+	display: block;
+	width: 100%;
+	height: 100%;
 	padding: 7px 15px;
 	color: var(--black);
 	border: none;
@@ -9,8 +12,26 @@
 	font-size: 16px;
 	font-weight: 22px;
 	font-family: var(--font-family);
+
+}
+
+.textAreaWrapper {
+	position: relative;
+
 }
 
 .textArea::placeholder {
 	color: var(--grey);
+
+}
+
+.error {
+	border: 1px solid var(--red);
+}
+
+.errorMessage {
+	position: absolute;
+	bottom: -22px;
+	left: 10px;
+	color: var(--red);
 }
