--- a/layout/Footer/Footer.module.css
+++ b/layout/Footer/Footer.module.css
@@ -37,12 +37,13 @@
 	}
 }
 
-@media (max-width: 765px) {
+@media (max-width: 879px) {
 	.footer {
 		grid-template-columns: 1fr;
 		grid-template-areas:
 			"copyright"
 			"agreement"
 			"policy";
+		padding: 20px 0;
 	}
 }
