--- a/components/Sort/Sort.module.css
+++ b/components/Sort/Sort.module.css
@@ -19,14 +19,22 @@
 	gap: 40px;
 }
 
-.sort span {
+.sort button {
 	display: grid;
 	gap: 8px;
 	grid-template-columns: 20px 1fr;
 	align-items: center;
 	cursor: pointer;
+	border: none;
+	background: none;
+	line-height: 22px;
+	font-size: 16px;
 }
 
-.sort span:not(.active) {
+.sort button:not(.active) {
 	grid-template-columns: 1fr;
+}
+
+.sortName {
+	display: none;
 }
