Meta + OpenGraph + YM + Husky added

--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -54,18 +54,18 @@
 }
 
 .title {
-	font-weight: 600;
-	font-size: 20px;
-	line-height: 27px;
 	align-self: flex-end;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 27px;
 }
 
 .price,
 .credit {
 	display: flex;
+	align-self: flex-end;
 	font-size: 20px;
 	line-height: 20px;
-	align-self: flex-end;
 }
 
 .oldPrice {
@@ -77,9 +77,9 @@
 }
 
 .month {
+	align-self: flex-end;
 	font-size: 14px;
 	line-height: 15px;
-	align-self: flex-end;
 }
 
 .rating {
@@ -87,32 +87,32 @@
 }
 
 .description {
+	margin-bottom: 15px;
 	font-size: 16px;
 	line-height: 24px;
-	margin-bottom: 15px;
 }
 
 .advTitle {
-	font-weight: bold;
 	margin-bottom: 5px;
+	font-weight: bold;
 }
 
 .advantages {
-	border-left: 2px solid var(--green);
-	padding-left: 15px;
 	margin-bottom: 20px;
+	padding-left: 15px;
+	border-left: 2px solid var(--green);
 }
 
 .disadvantages {
-	border-left: 2px solid var(--red);
 	padding-left: 15px;
+	border-left: 2px solid var(--red);
 }
 
 .priceTitle,
 .creditTitle,
 .ratingTitle {
-	font-weight: 300;
 	font-size: 14px;
+	font-weight: 300;
 	line-height: 19px;
 }
 
@@ -123,12 +123,11 @@
 .charachteristics {
 	display: grid;
 	grid-template-columns: auto 1fr auto;
-	gap: 10px;
-	padding-right: 60px;
 	align-items: baseline;
-
+	padding-right: 60px;
 	font-size: 16px;
 	line-height: 32px;
+	gap: 10px;
 }
 
 .charachteristicsName {
@@ -136,19 +135,18 @@
 }
 
 .charachteristicsDots {
-	border-bottom: 1px dashed var(--grey-light);
 	margin-bottom: 5px;
+	border-bottom: 1px dashed var(--grey-light);
 }
 
 .reviews {
 	margin-top: 5px;
-	overflow: hidden;
 	padding: 30px;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 1320px) {
 	.product {
-		grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
 		grid-template-areas:
 			"logo . title title title title title"
 			"logo . tags tags tags tags tags"
@@ -159,8 +157,8 @@
 			"feature feature feature feature feature feature feature"
 			"advBlock advBlock advBlock advBlock advBlock advBlock advBlock"
 			"hr2 hr2 hr2 hr2 hr2 hr2 hr2"
-			"actions actions actions actions actions actions actions"
-		;
+			"actions actions actions actions actions actions actions";
+		grid-template-columns: 70px 30px auto 40px auto 40px 1fr;
 	}
 
 	.logo {
@@ -233,7 +231,6 @@
 
 @media screen and (max-width: 640px) {
 	.product {
-		grid-template-columns: 70px 30px 1fr;
 		grid-template-areas:
 			"logo . title"
 			"logo . tags"
@@ -245,8 +242,8 @@
 			"feature feature feature"
 			"advBlock advBlock advBlock"
 			"hr2 hr2 hr2"
-			"actions actions actions"
-		;
+			"actions actions actions";
+		grid-template-columns: 70px 30px 1fr;
 	}
 
 	.price {
@@ -264,7 +261,6 @@
 
 @media screen and (max-width: 480px) {
 	.product {
-		grid-template-columns: 1fr;
 		grid-template-areas:
 			"logo"
 			"title"
@@ -280,20 +276,20 @@
 			"feature"
 			"advBlock"
 			"hr2"
-			"actions"
-		;
+			"actions";
+		grid-template-columns: 1fr;
 	}
 
 	.price {
-		margin-bottom: 0px;
+		margin-bottom: 0;
 	}
 
 	.credit {
-		margin-bottom: 0px;
+		margin-bottom: 0;
 	}
 
 	.rating {
-		margin-bottom: 0px;
+		margin-bottom: 0;
 	}
 
 	.priceTitle {
