--- a/components/ButtonIcon/ButtonIcon.module.css
+++ b/components/ButtonIcon/ButtonIcon.module.css
@@ -1,10 +1,9 @@
 .button {
 	width: 40px;
 	height: 40px;
-
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
 	border: none;
 	border-radius: 10px;
+	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 	cursor: pointer;
 }
 
