--- a/components/HhData/HhData.module.css
+++ b/components/HhData/HhData.module.css
@@ -10,10 +10,10 @@
 }
 
 .title {
-	font-weight: 300;
-	font-size: 20px;
-	line-height: 27px;
 	margin-bottom: 10px;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 27px;
 }
 
 .salary {
@@ -24,26 +24,26 @@
 	gap: 20px 0;
 }
 
-.salary>div {
+.salary > div {
 	border-right: 3px solid var(--grey-light);
 }
 
-.salary>div:last-child {
+.salary > div:last-child {
 	border-right: none;
 }
 
 .countValue {
-	font-weight: bold;
-	font-size: 36px;
-	line-height: 49px;
 	color: var(--primary);
+	font-size: 36px;
+	font-weight: bold;
+	line-height: 49px;
 }
 
 .salaryValue {
-	font-weight: 700;
-	font-size: 26px;
-	line-height: 35px;
 	margin-bottom: 10px;
+	font-size: 26px;
+	font-weight: 700;
+	line-height: 35px;
 }
 
 .rate {
@@ -68,14 +68,14 @@
 		grid-template-columns: 1fr;
 	}
 
-	.salary>div {
+	.salary > div {
+		padding-bottom: 20px;
 		border-right: none;
 		border-bottom: 1px solid var(--grey-light);
-		padding-bottom: 20px;
 	}
 
-	.salary>div:last-child {
+	.salary > div:last-child {
+		padding-bottom: 0;
 		border-bottom: none;
-		padding-bottom: 0px;
 	}
 }
