--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -8,14 +8,12 @@
 
 .S {
 	padding: 5px 10px;
-
 	font-size: 12px;
 	line-height: 12px;
 }
 
 .M {
 	padding: 5px 10px;
-
 	font-size: 14px;
 	line-height: 14px;
 }
@@ -25,25 +23,25 @@
 }
 
 .red {
-	color: var(--white);
 	background: #DE0000;
+	color: var(--white);
 	font-weight: bold;
 }
 
 .grey {
+	background: #51658C;
 	color: var(--white);
-	background: #51658c;
 	font-weight: bold;
 }
 
 .green {
-	color: var(--green);
 	background: var(--green-light);
+	color: var(--green);
 	font-weight: bold;
 }
 
 .primary {
-	color: var(--primary);
-	background: none;
 	border: 1px solid var(--primary);
+	background: none;
+	color: var(--primary);
 }
