--- a/components/TextArea/TextArea.module.css
+++ b/components/TextArea/TextArea.module.css
@@ -3,26 +3,23 @@
 	width: 100%;
 	height: 100%;
 	padding: 7px 15px;
-	color: var(--black);
 	border: none;
+	border-radius: 5px;
 	outline-color: var(--primary);
 	background: var(--white);
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-	border-radius: 5px;
+	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
+	color: var(--black);
+	font-family: var(--font-family);
 	font-size: 16px;
 	font-weight: 22px;
-	font-family: var(--font-family);
-
 }
 
 .textAreaWrapper {
 	position: relative;
-
 }
 
 .textArea::placeholder {
 	color: var(--grey);
-
 }
 
 .error {
