--- a/layout/Header/Header.module.css
+++ b/layout/Header/Header.module.css
@@ -1,33 +1,31 @@
+.header {
+	display: none;
+}
+
+.mobileMenu {
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 20px 10px;
+	overflow-y: scroll;
+	background: #F5F6F8;
+}
+
+.menuClose {
+	position: fixed;
+	z-index: 11;
+	top: 15px;
+	right: 15px;
+}
+
+@media (max-width: 879px) {
 	.header {
-		display: none;
+		display: grid;
+		grid-template-columns: 1fr 40px;
+		gap: 10px;
+		margin: 15px 15px 0;
 	}
-
-	.mobileMenu {
-		position: fixed;
-		z-index: 10;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		overflow-y: scroll;
-
-		padding: 20px 10px;
-
-		background: #f5f6f8;
-	}
-
-	.menuClose {
-		position: fixed;
-		z-index: 11;
-		top: 15px;
-		right: 15px;
-	}
-
-	@media (max-width: 879px) {
-		.header {
-			display: grid;
-			grid-template-columns: 1fr 40px;
-			gap: 10px;
-			margin: 15px 15px 0 15px;
-		}
-	}
+}
