--- a/components/P/P.module.css
+++ b/components/P/P.module.css
@@ -12,7 +12,19 @@
 	line-height: 24px;
 }
 
+.MWithMargin {
+	margin-top: 5px;
+	font-size: 16px;
+	line-height: 24px;
+}
+
 .L {
+	font-size: 18px;
+	line-height: 29px;
+}
+
+.LWithMargin {
+	margin-top: 10px;
 	font-size: 18px;
 	line-height: 29px;
 }
